--- a/Class007/index.html
+++ b/Class007/index.html
@@ -24,6 +24,11 @@
         </legend>
         <img src="./imgs/test_img.jpg" alt="a cute cat" class="rounded-circle">
     </figure>
+
+    <figure>
+        <img src="./imgs/test_img.jpg" alt="a cute cat" class="img-thubnail">
+        <figcaption></figcaption>
+    </figure>
 </body>
 </html>
 
